# sage

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.bat  doxide.yml  mkdocs.yml  qt.conf  sonar-project.properties  test.bat  vcpkg.json
.github/workflows/: build.yml  sonar.yml  test.yml
internal/tess/: CMakeLists.txt  Directory.Build.props  build.bat  main.cpp  ocr.py  requirements.txt  tess_ocr_api.cpp  tess_ocr_api.h  test_ocr.py  vcpkg.json  webcam_ocr_runner.h
overrides/: main.html
qml/: AccountDialog.qml  AccountRow.qml  AccountsTable.qml  ActionBar.qml  CliPanel.qml  ConfirmDialog.qml  DialogBlobs.qml  DirectoryBar.qml  HeaderBar.qml  Main.qml  PasswordDialog.qml  RippleEffect.qml  SearchBar.qml  StatusFooter.qml  SvgIcon.qml  Theme.qml  TintedButton.qml
scripts/: _clean_docs.py  clean_docs.py
src/: Backend.cpp  Backend.h  CameraSelector.cpp  CameraSelector.h  CliDispatch.cpp  CliDispatch.h  CliHandler.cpp  CliHandler.h  CliModes.cpp  Clipboard.cpp  Clipboard.h  Console.cpp  Console.h  CryptoConfig.h  CryptoGuards.h  Cryptography.cpp  Cryptography.h  FileOperations.cpp  FileOperations.h  FillController.cpp  FillController.h  LockedAllocator.h  Logging.cpp  Logging.h  NativeDialogs.cpp  PasswordGen.cpp  PasswordGen.h  QmlMain.cpp  QmlMain.h  QrCapture.cpp  QrCapture.h  ScopedDpapiUnprotect.h  SecureString.h  Utils.cpp  Utils.h  Vault.cpp  Vault.h  VaultModel.cpp  VaultModel.h  Version.h  (+4 more)
tests/: test_crypto.cpp  test_helpers.h  test_integration.cpp  test_utils.cpp
